[project]
name = "icloud-contacts-downloader"
version = "0.1.0"
description = "A script for downloading contacts from iCloud"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pyicloud>=2.0.1"]

[project.scripts]
icloudcd = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py"]
